--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     </header>
 
 	<!-- Menu, blog, ghosts, plastikal -->
-	<section id="contact">
+	<section id="links">
+		<br /><p>Feel free to take a look around my illustrations, my writing blog and my hobby showcase! </p>
 	<div class="grid">
 					<figure class="effect-layla">
 						<img src="img/imga.jpg" alt="Ghosts"/>
@@ -97,7 +98,7 @@
     <section id="links" class="container content-section text-center">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <p>Feel free to take a look around my illustrations, my writing blog and my hobby showcase! Want to inquire me about work? Just hit the link below to drop me a message!</p>
+                <p>Want to inquire me about work? Just hit the link below to drop me a message!</p>
                 <p><a href="mailto:gilang@gilangdanu.com"><i class="fa fa-paper-plane"></i>&nbsp;gilang@gilangdanu.com</a>
                 </p>
 				<p>or connect with me here</p>
