--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/set1.css" />
+	<link rel="stylesheet" type="text/css" href="css/set2.css" />
 	
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -56,8 +57,8 @@
 	<section id="links">
 		<br /><p>Feel free to take a look around my illustrations, my writing blog and my hobby showcase! </p>
 	<div class="grid">
-					<figure class="effect-layla">
-						<img src="img/imga.jpg" alt="Ghosts"/>
+					<figure class="effect-moses">
+						<img src="img/imga1.png" alt="Ghosts"/>
 						<figcaption>
 							<h2>Ghosts</h2>
 							<p>A tumblog where I kept my illustrations and writing</p>
@@ -65,8 +66,8 @@
 						</figcaption>			
 					</figure>
 		
-					<figure class="effect-layla">
-						<img src="img/img1.jpg" alt="Ascetic"/>
+					<figure class="effect-moses">
+						<img src="img/imga2.png" alt="Ascetic"/>
 						<figcaption>
 							<h2>Ascetic</h2>
 							<p>My blog on github pages, published with hubpress.</p>
@@ -74,8 +75,8 @@
 						</figcaption>			
 					</figure>
 		
-					<figure class="effect-layla">
-						<img src="img/img3.jpg" alt="Plastikal"/>
+					<figure class="effect-moses">
+						<img src="img/imga3.png" alt="Plastikal"/>
 						<figcaption>
 							<h2>Plastikal</h2>
 							<p>My model kits showcase!</p>
@@ -83,8 +84,8 @@
 						</figcaption>			
 					</figure>
 		
-					<figure class="effect-layla">
-						<img src="img/img4.jpg" alt="LEX"/>
+					<figure class="effect-moses">
+						<img src="img/imga4.png" alt="LEX"/>
 						<figcaption>
 							<h2>LEX</h2>
 							<p>Coming soon.</p>
