--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <p><strong>Hey, feel free to take a walk around my land!</strong></p>
 </div>
   <p class="text text-3"><span>Want to inquire me about work?Just drop me a message!</span></p>
-  <button onClick="window.location='mailto:gilang@gilangdanu.com';" class="_button _button-6">gilang@gilangdanu.com</button>
+  <p class="text text-4"><span>gilang@gilangdanu.com</span></p>
 	<button onClick="window.location='http://www.facebook.com/gilang.danu';" class="_button _button-7" ><i class="fa fa-facebook fa-lg"></i></button>
   <button onClick="window.location='http://twitter.com/gilangdanu';" class="_button _button-8"><i class="fa fa-twitter fa-lg"></i></button>
-	<button onClick="window.location='http://www.facebook.com/gilang.danu';" class="_button _button-9"><i class="fa fa-pinterest fa-lg"></i></button>
+	<button onClick="window.location='https://www.pinterest.com/gilangdanu/';" class="_button _button-9"><i class="fa fa-pinterest fa-lg"></i></button>
   <button onClick="window.location='https://github.com/gilangdanu';" class="_button _button-10"><i class="fa fa-github-alt fa-lg"></i></button>
   <div class="text text-4">
     <p><em>© 2015<br></em></p>
