bugfixes on button

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 <body class="body page-index clearfix">
   <p class="text text-1"><strong>Hi, there. I'm Gilang Danu.</strong></p>
   <img class="image" src="images/bg.svg">
-  <button onClick="window.location='portfolio.html';" class="_button _button-1" class="masterTooltip" title="My illustration portfolio">1 </button>
-  <button onClick="window.location='http://gilangdanu.com/blog/';" class="_button _button-2" class="masterTooltip" title="My blog on github">2 </button>
-  <button onClick="window.location='dance.html';" class="_button _button-3" class="masterTooltip" title="Sexy time, baby!">5 </button>
-  <button onClick="window.location='http://goodreads.com/gilangdanu';" class="_button _button-4" class="masterTooltip" title="Book reviews on Goodreads">4 </button>
-  <button onClick="window.location='http://plastikal.tumblr.com';" class="_button _button-5" class="masterTooltip" title="My scale model showcase!">3 </button>
+  <button onClick="window.location='dance.html';" class="_button _button-1" class="masterTooltip" title="Sexy dance time, baby!">5 </button>
+  <button onClick="window.location='http://goodreads.com/gilangdanu';" class="_button _button-2" class="masterTooltip" title="My bookshelf on Goodreads">4 </button>
+  <button onClick="window.location='http://plastikal.tumblr.com';" class="_button _button-3" class="masterTooltip" title="My scale model showcase">3 </button>
+  <button onClick="window.location='http://gilangdanu.com/blog/';" class="_button _button-4" class="masterTooltip" title="My blog on github, published with the almighty Hubpress">2 </button>
+  <button onClick="window.location='portfolio.html';" class="_button _button-5" class="masterTooltip" title="My illustration portfolio">1 </button>
   <div class="text text-2">
     <p><strong>I'm a writer, illustrator and occassional coder.&nbsp;(Or simply just a guy with too many ideas on his head.) I read books and drink my coffee before I go to sleep.</strong></p>
     <p><strong>Hey, feel free to take a walk around my land!</strong></p>
 </div>
-  <p class="text text-3"><span>Want to inquire me about work?Just drop me a message!</span></p>
-  <p class="text text-4"><span>gilang@gilangdanu.com</span></p>
-	<button onClick="window.location='http://www.facebook.com/gilang.danu';" class="_button _button-7" ><i class="fa fa-facebook fa-lg"></i></button>
-  <button onClick="window.location='http://twitter.com/gilangdanu';" class="_button _button-8"><i class="fa fa-twitter fa-lg"></i></button>
-	<button onClick="window.location='https://www.pinterest.com/gilangdanu/';" class="_button _button-9"><i class="fa fa-pinterest fa-lg"></i></button>
-  <button onClick="window.location='https://github.com/gilangdanu';" class="_button _button-10"><i class="fa fa-github-alt fa-lg"></i></button>
+  <p class="text text-3"><span>gilang@gilangdanu.com</span></p>
+  <p class="text text-4"><span>Want to inquire me about work?Just drop me a message!</span></p>
+  
+	<button onClick="window.location='http://www.facebook.com/gilang.danu';" class="_button _button-6" ><i class="fa fa-facebook fa-lg"></i></button>
+  <button onClick="window.location='http://twitter.com/gilangdanu';" class="_button _button-7"><i class="fa fa-twitter fa-lg"></i></button>
+	<button onClick="window.location='https://www.pinterest.com/gilangdanu/';" class="_button _button-8"><i class="fa fa-pinterest fa-lg"></i></button>
+  <button onClick="window.location='https://github.com/gilangdanu';" class="_button _button-9"><i class="fa fa-github-alt fa-lg"></i></button>
   <div class="text text-5">
     <p><em>© 2015<br></em></p>
     <p><em>&nbsp;Handcoded with&nbsp;♥ from Jakarta by Gilang Danu</em><br></p>
