--- a/dance.html
+++ b/dance.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/dance.css">
 </head>
 <body class="body page-dance clearfix">
-  <img class="image" src="images/dancingstorm3.gif" data-rimage data-src="images/dancingstorm3.gif">
+  <img class="image" src="images/dancingstorm3-508x700.gif" data-rimage data-src="images/dancingstorm3-508x700.gif" onmouseover="this.src='images/dancingstorm3.gif'" onmouseout="this.src='images/dancingstorm3-508x700.gif'">
   <p class="text"><strong>Aaawww yeah, sexy dance time!</strong></p>
   <button onClick="window.location='index.html';" class="_button">Please, take me back home</button>
 
