--- a/index.html
+++ b/index.html
@@ -4,42 +4,73 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>Gilang Danu</title>
-  <link href="http://fonts.googleapis.com/css?family=Oxygen:400,400,700|Lato:300,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/standardize.css">
-  <link rel="stylesheet" href="css/index-grid.css">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-</head>
-<body class="body page-index clearfix">
-  <p class="text text-1"><strong>Hi, there. I'm Gilang Danu.</strong></p>
-  <img class="image" src="images/bg.svg">
+	
+	
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,700|Merriweather:400,700">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/basscraft.min.css">
+<link rel="stylesheet" href="css/mantab.css">
+	</head>
 
-	<div id="goyang">
-  <button onClick="window.location='dance.html';" class="_button _button-1 animated pulse tooltip">5<span class="tooltip-content">It's sexy dance time, baby!</span></button>
-  <button onClick="window.location='http://goodreads.com/gilangdanu';" class="_button _button-2 animated-2 pulse tooltip">4 <span class="tooltip-content">My book reviews on Goodreads</span></button>
-  <button onClick="window.location='http://plastikal.tumblr.com';" class="_button _button-3 animated pulse tooltip">3 <span class="tooltip-content">My scale model showcase!</span></button>
-  <button onClick="window.location='http://gilangdanu.com/blog/';" class="_button _button-4 animated-2 pulse tooltip">2 <span class="tooltip-content"> My blog on github, powered by Hubpress</span></button>
-  <button onClick="window.location='portfolio.html';" class="_button _button-5 animated pulse tooltip">1 <span class="tooltip-content"> My illustration portfolio</span></button>
+<body>
+		<div class="red px4">
+	  <header class="mt1 mb1 px2 py2 border-bottom">
+      <h1 class="sans h3 caps m0">Gilang Danu</h1>
+    </header>
+			<br />
+	<div class="biarketengah kontainer-gede">
+<div class="kontainer-kota">
+	<button onClick="window.location='portfolio.html';" class="tombol-nyala2 tooltip" style="top: 22%;left: 38%;
+  z-index: 5;">1<span class="tooltip-content">My illustration portfolio</span></button>
+	
+	<button onClick="window.location='http://gilangdanu.com/blog/';" class="tombol-nyala tooltip" style="top: 35%;left: 55%;
+  z-index: 5;">2<span class="tooltip-content">My writing blog at github pages, powered by Hubpress</span></button>
+	
+	<button onClick="window.location='http://goodreads.com/gilangdanu';" class="tombol-nyala2 tooltip" style="top: 56%;left: 70%;
+  z-index: 5;">3<span class="tooltip-content">My bookshelf on Goodreads</span></button>
+	
+	<button onClick="window.location='http://plastikal.tumblr.com';" class="tombol-nyala tooltip" style="top: 82%;left: 54%;
+  z-index: 5;">4<span class="tooltip-content">My scale model showcase!</span></button>
+	
+	<button onClick="window.location='dance.html';" class="tombol-nyala2 tooltip" style="top: 50%;left: 19%;
+  z-index: 5;">5<span class="tooltip-content">It's sexy dance time, baby!</span></button>
+	
+			<img src="img/bg.svg" alt="Isometric City">    
+     </div>
+	</div>
 	</div>
 	
-  <div class="text text-2">
-    <p><strong>I'm a writer, illustrator and occassional coder.&nbsp;(Or simply just a guy with too many ideas on his head.) I read books and drink my coffee before I go to sleep.</strong></p>
-    <p><strong>Hey, feel free to take a walk around my land!</strong></p>
-</div>
-  <p class="text text-3"><span>gilang@gilangdanu.com</span></p>
-  <p class="text text-4"><span>Want to inquire me about work?Just drop me a message!</span></p>
-  
-	<button class="_button _button-6" ><a href="http://www.facebook.com/gilang.danu"><i class="fa fa-facebook fa-lg"></i></a></button>
-	<button class="_button _button-7"><a href="http://twitter.com/gilangdanu"><i class="fa fa-twitter fa-lg"></i></a></button>
-	<button class="_button _button-8"><a href="https://www.pinterest.com/gilangdanu/"><i class="fa fa-pinterest fa-lg"></a></i></button>
-	<button class="_button _button-9"><a href="https://github.com/gilangdanu/"><i class="fa fa-github-alt fa-lg"></i></a></button>
-  <div class="text text-5">
-    <p><em>© 2015<br></em></p>
-    <p><em>&nbsp;Handcoded with&nbsp;♥ from Jakarta by Gilang Danu</em><br></p>
-</div>
+<div class="white bg-red px4 mt2">
+<section id="hello" class="py3 mt1">
+      <p class="serif center h2 h2-responsive bold px4 py1 border-top border-bottom">
+       Hi, there. I'm Gilang Danu.<br /> 
+		 Copywriter, illustrator, and occassional coder <br />(or simply a guy with too many ideas on his head). <br />I read books and drink coffee before I go to sleep.<br /> I still aspire to be Batman.<br /></p>
+	</section>
+	
+<section class="container px2 py3">
+  <div class="clearfix mxn2">
+	  
+    <div class="sm-col sm-col-4 px2">
+      <p>Want to inquire me about work, or simply just say hello? Don't hesitate to drop me a message! 
+	  <h4 class="sans mt0">
+<i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h4></p>
+    </div>
+	
+    <div class="sm-col sm-col-4 px2">
+    <section class="center mx-auto">
+	<a href="https://github.com/gilangdanu" class="red bg-white caps block button m1 button-outline"><i class="fa fa-github-alt fa-lg"></i><span>&nbsp;Github</span></a>
+      <a href="https://twitter.com/gilangdanu" class="red bg-white caps button block m1 button-outline"><i class="fa fa-twitter fa-lg"></i><span>&nbsp;twitter</span></a>
+	<a href="https://www.facebook.com/gilang.danu/" class="red bg-white block caps button m1 button-outline"><i class="fa fa-facebook fa-lg"></i><span>&nbsp;facebook</span></a>
+    </section>
+    </div>
+    <div class="right-align sm-col sm-col-4 px2">
+        <span class="sans"> Handcoded with <i class="heart fa fa-heart fa-lg"></i>&nbsp;from Jakarta<br />Ⓒ Gilang Danu  2015 </span>
+    </div>
+  </div>
+</section>
 
-  <script src="js/jquery-min.js"></script>
-  <script src="js/rimages.js"></script>
-
+</div>
+	 
+	
 </body>
 </html>
