--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<button onClick="window.location='dance.html';" class="tombol-nyala2 tooltip" style="top: 50%;left: 19%;
   z-index: 5;">5<span class="tooltip-content">It's sexy dance time, baby!</span></button>
 	
-			<img src="img/bg.svg" alt="Isometric City">    
+			<img src="images/bg.svg" alt="Isometric City">    
      </div>
 	</div>
 	</div>
