--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,700|Merriweather:400,700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <link rel="stylesheet" href="css/basscraft.min.css">
 <link rel="stylesheet" href="css/mantab.css">
 	</head>
@@ -71,6 +72,7 @@
 
 </div>
 	 
-	
+<script src="js/modernizr.js"></script>
+<script src="js/main.js"></script>	
 </body>
 </html>
