--- a/index.html
+++ b/index.html
@@ -36,35 +36,32 @@
 	<button onClick="window.location='dance.html';" class="tombol-nyala2 tooltip" style="top: 50%;left: 19%;
   z-index: 5;">5<span class="tooltip-content">It's sexy dance time, baby!</span></button>
 	
-			<img src="images/bg.svg" alt="Isometric City">    
+			<img src="images/bg.svg" alt="Isometric City">
+	
+	<p class="right-align mxn1">(This site is best viewed on desktop)</p>
      </div>
 	</div>
 	</div>
 	
-<div class="white bg-red px4 mt2">
+<div class="red px4 mt2">
 <section id="hello" class="py3 mt1">
-      <p class="serif center h2 h2-responsive bold px4 py1 border-top border-bottom">
-       Hi, there. I'm Gilang Danu.<br /> 
-		 Copywriter, illustrator, and occassional coder <br />(or simply a guy with too many ideas on his head). <br />I read books and drink coffee before I go to sleep.<br /> I still aspire to be Batman.<br /></p>
+      <p class="serif left-align h2 h2-responsive bold px4 py1 border-top">
+		  Hi, there. I'm Gilang Danu. A copywriter, illustrator, and occassional coder (or simply a guy with too many ideas on his head).<br /></p>
+	<p class="p-responsive px4 py1"> I started out as freelance writer and illustrator before joined <b>Kineto</b> as sole copywriter there. Currently I'm an associate at <b>Marktalent</b>, specially tasked to build a new innovative business unit that would combine digital tech and creative works into the field of market research. Outside the office, I made up half of <b>Reticula Studio</b> (because there's only 2 of us there!) which I co-found with my brother. I read books and drink coffee before I go to sleep, I also aspire to be Batman. Yeah.<br /><br /> If you want to inquire me about work, or simply just say hello, please don't hesitate to drop me a message! <h3 class="px4 py1 sans m0 border-bottom">
+<i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h3></p>
 	</section>
 	
 <section class="container px2 py3">
-  <div class="clearfix mxn2">
-	  
-    <div class="sm-col sm-col-4 px2">
-      <p>Want to inquire me about work, or simply just say hello? Don't hesitate to drop me a message! 
-	  <h4 class="sans mt0">
-<i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h4></p>
-    </div>
-	
-    <div class="sm-col sm-col-4 px2">
+  <div class="clearfix mxn1">
+	<img src="images/me2.png" onmouseover="this.src='images/me2alt.png'" onmouseout="this.src='images/me2.png'"class= mb4 style="display: block; margin-left: auto; margin-right: auto" width= 180px height= 180px>
+    
     <section class="center mx-auto">
-	<a href="https://github.com/gilangdanu" class="red bg-white caps block button m1 button-outline"><i class="fa fa-github-alt fa-lg"></i><span>&nbsp;Github</span></a>
-      <a href="https://twitter.com/gilangdanu" class="red bg-white caps button block m1 button-outline"><i class="fa fa-twitter fa-lg"></i><span>&nbsp;twitter</span></a>
-	<a href="https://www.facebook.com/gilang.danu/" class="red bg-white block caps button m1 button-outline"><i class="fa fa-facebook fa-lg"></i><span>&nbsp;facebook</span></a>
+	<a href="https://github.com/gilangdanu" class="white bg-red caps button m1 button-outline"><i class="fa fa-github-alt fa-lg"></i><span>&nbsp;Github</span></a>
+      <a href="https://twitter.com/gilangdanu" class="white bg-red caps button m1 button-outline"><i class="fa fa-twitter fa-lg"></i><span>&nbsp;twitter</span></a>
+	<a href="https://www.facebook.com/gilang.danu/" class="white bg-red caps button m1 button-outline"><i class="fa fa-facebook fa-lg"></i><span>&nbsp;facebook</span></a>
     </section>
     </div>
-    <div class="right-align sm-col sm-col-4 px2">
+    <div class="center px2 mt4">
         <span class="sans"> Handcoded with <i class="heart fa fa-heart fa-lg"></i>&nbsp;from Jakarta<br />Ⓒ Gilang Danu  2015 </span>
     </div>
   </div>
