--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <section id="hello" class="py3 mt1">
       <p class="serif left-align h2 h2-responsive bold px4 py1 border-top">
 		  Hi, there. I'm Gilang Danu. A copywriter, illustrator, and occassional coder (or simply a guy with too many ideas on his head).<br /></p>
-	<p class="p-responsive px4 py1"> I started out as freelance writer and illustrator before joined <b>Kineto</b> as sole copywriter there. Currently I'm an associate at <b>Marktalent</b>, specially tasked to build a new innovative business unit that would combine digital tech and creative works into the field of market research. Outside the office, I made up half of <b>Reticula Studio</b> (because there's only 2 of us there!) which I co-found with my brother. I read books and drink coffee before I go to sleep, I also aspire to be Batman. Yeah.<br /><br /> If you want to inquire me about work, or simply just say hello, please don't hesitate to drop me a message! <h3 class="px4 py1 sans m0 border-bottom">
+	<p class="p-responsive px4 py1"> If you want to inquire me about work, or simply just say hello, please don't hesitate to drop me a message! <h3 class="px4 py1 sans m0 border-bottom">
 <i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h3></p>
 	</section>
 	
