--- a/dance.html
+++ b/dance.html
@@ -6,14 +6,18 @@
   <title>dance</title>
   <link href="http://fonts.googleapis.com/css?family=Oxygen:400,400|Lato:700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/standardize.css">
-  <link rel="stylesheet" href="css/dance-grid.css">
+  <link rel="stylesheet" href="css/basscss.css">
   <link rel="stylesheet" href="css/dance.css">
 </head>
-<body class="body page-dance clearfix">
-  <img class="image" src="images/dancingstorm3-508x700.gif" data-rimage data-src="images/dancingstorm3-508x700.gif" onmouseover="this.src='images/dancingstorm3.gif'" onmouseout="this.src='images/dancingstorm3-508x700.gif'">
-  <p class="text"><strong>Aaawww yeah, sexy dance time!</strong></p>
-  <button onClick="window.location='index.html';" class="_button">Please, take me back home</button>
-
+<body class="body page-dance container">
+ <div class="clearfix">
+ <div id="gambarjoget" class="col sm-col-4 md-col-6 lg-col-6 center mt4 px2 mr2 ml2 py2">
+  <img class="image" src="images/dancingstorm3.gif"></div>
+  <div id="tombolteks" class="col sm-col-2 md-col-3 lg-col-4 mt4 py4">
+  <p class="disclaimer white mt4 py2 center">Umm, sorry but your screen is too small for this <em>awesomeness</em>, get bigger one.</p>
+  <p class="text h1 white mt4 py2"><strong>Aaawww yeah, sexy dance time!</strong></p>
+  <div class="flex flex-center"><button class="mt2 px2 center btn btn-primary bg-red white"  onClick="window.location='index.html';" class="_button">Please, take me back home</button></div>
+</div></div>
   <script src="js/jquery-min.js"></script>
   <script src="js/rimages.js"></script>
 </body>
