--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <link rel="shortcut icon" href="images/favicon.png">
 	
 	
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,700|Merriweather:400,700">
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,700|Roboto+Slab:400,700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<link rel="stylesheet" href="css/basscraft.min.css">
+<link rel="stylesheet" href="css/basscss.css">
 <link rel="stylesheet" href="css/mantab.css">
 	</head>
 
@@ -21,6 +21,20 @@
     </header>
 			<br />
 	<div class="biarketengah kontainer-gede">
+	<nav class="menukecil left-align">
+		<ul>
+			<li class="py1"><a href="portfolio.html" title="My Portfolio"><button class="btn btn-primary btn-lg bg-red">Portfolio</button></a></li>
+			
+			<li class="py1"><a href="http://gilangdanu.com/blog" title="My blog on github pages"><button class="btn btn-primary btn-lg bg-red">Blog</button></a></li>
+			
+			<li class="py1"><a href="http://plastikal.tumblr.com" title="My scale model showcase"><button class="btn btn-primary btn-lg bg-red">Plastikal</button></a></li>
+			
+			<li class="py1"><a href="dance.html" title="B-b-bonus!"><button class="btn btn-primary btn-lg bg-red">Dance time!</button></a></li>
+			
+		</ul>
+	</nav>
+	
+	
 <div class="kontainer-kota">
 	<button onClick="window.location='portfolio.html';" class="tombol-nyala2 tooltip" style="top: 22%;left: 38%;
   z-index: 5;">1<span class="tooltip-content">My illustration portfolio</span></button>
@@ -38,28 +52,27 @@
   z-index: 5;">5<span class="tooltip-content">It's sexy dance time, baby!</span></button>
 	
 			<img src="images/bg.svg" alt="Isometric City">
-	
-	<p class="right-align mxn1">(This site is best viewed on desktop)</p>
      </div>
+     <p id="keterangan" class="center mxn1">(For better experience, please view the site on desktop)</p>
 	</div>
 	</div>
 	
-<div class="red px4 mt2">
+<div id="teks" class="red px4 mt2">
 <section id="hello" class="py3 mt1">
-      <p class="serif left-align h2 h2-responsive bold px4 py1 border-top">
+      <p id="teksgede" class="serif left-align h2 h2-responsive bold px4 py1 border-top">
 		  Hi, there. I'm Gilang Danu. A copywriter, illustrator, and occassional coder (or simply a guy with too many ideas on his head).<br /></p>
-	<p class="p-responsive px4 py1"> If you want to inquire me about work, or simply just say hello, please don't hesitate to drop me a message! <h3 class="px4 py1 sans m0 border-bottom">
-<i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h3></p>
+	<p class="p-responsive px4 py1"> If you want to inquire me about work, or simply just say hello, please don't hesitate to drop me a message!</p> <h3 class="px4 py1 sans m0 border-bottom">
+<i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h3>
 	</section>
 	
 <section class="container px2 py3">
   <div class="clearfix mxn1">
 	<img src="images/me2.png" onmouseover="this.src='images/me2alt.png'" onmouseout="this.src='images/me2.png'"class= mb4 style="display: block; margin-left: auto; margin-right: auto" width= 180px height= 180px>
     
-    <section class="center mx-auto">
-	<a href="https://github.com/gilangdanu" class="white bg-red caps button m1 button-outline"><i class="fa fa-github-alt fa-lg"></i><span>&nbsp;Github</span></a>
-      <a href="https://twitter.com/gilangdanu" class="white bg-red caps button m1 button-outline"><i class="fa fa-twitter fa-lg"></i><span>&nbsp;twitter</span></a>
-	<a href="https://www.facebook.com/gilang.danu/" class="white bg-red caps button m1 button-outline"><i class="fa fa-facebook fa-lg"></i><span>&nbsp;facebook</span></a>
+    <section class="center mx-auto mb2">
+	<a href="https://github.com/gilangdanu" class="py1"><button class="btn btn-outline red"><i class="fa fa-github-alt fa-lg"></i><span class="h6 caps">&nbsp;Github</span></button></a>
+     <a href="https://twitter.com/gilangdanu" class="py1"><button class="btn btn-outline red"><i class="fa fa-twitter fa-lg"></i><span class="h6 caps">&nbsp;Twitter</span></button></a>
+        <a href="https://www.facebook.com/gilang.danu" class="py1"><button class="btn btn-outline red"><i class="fa fa-facebook fa-lg"></i><span class="h6 caps">&nbsp;Facebook</span></button></a>
     </section>
     </div>
     <div class="center px2 mt4">
