--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="teks" class="red px4 mt2">
 <section id="hello" class="py3 mt1">
       <p id="teksgede" class="serif left-align h2 h2-responsive bold px4 py1 border-top">
-		  Hi, there. I'm Gilang Danu. A copywriter, illustrator, and occassional coder (or simply a guy with too many ideas on his head).<br /></p>
+		  Hi, there. I'm Gilang Danu. A copywriter, editor, and occassional coder (or simply a guy with too many ideas on his head).<br /></p>
 	<p class="p-responsive px4 py1"> If you want to inquire me about work, or simply just say hello, please don't hesitate to drop me a message!</p> <h3 class="px4 py1 sans m0 border-bottom">
 <i class="fa fa-paper-plane fa-lg"></i> &nbsp;gilang@gilangdanu.com</h3>
 	</section>
