--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="biarketengah kontainer-gede">
 	<nav class="menukecil left-align">
 		<ul>
-			<li class="py1"><a href="portfolio.html" title="My Portfolio"><button class="btn btn-primary btn-lg bg-red">Portfolio</button></a></li>
+			<li class="py1"><a href="https://www.flickr.com/people/gilangdanu/" title="My Portfolio"><button class="btn btn-primary btn-lg bg-red">Portfolio</button></a></li>
 			
 			<li class="py1"><a href="http://gilangdanu.com/blog" title="My blog on github pages"><button class="btn btn-primary btn-lg bg-red">Blog</button></a></li>
 			
@@ -37,7 +37,7 @@
 	
 <div class="kontainer-kota">
 	<button onClick="window.location='portfolio.html';" class="tombol-nyala2 tooltip" style="top: 22%;left: 38%;
-  z-index: 5;">1<span class="tooltip-content">My illustration portfolio</span></button>
+  z-index: 5;">1<span class="tooltip-content">My favorite pastime, video game photography!</span></button>
 	
 	<button onClick="window.location='http://gilangdanu.com/blog/';" class="tombol-nyala tooltip" style="top: 35%;left: 55%;
   z-index: 5;">2<span class="tooltip-content">My writing blog at github pages, powered by Hubpress</span></button>
