--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 	
 <div class="kontainer-kota">
-	<button onClick="window.location='portfolio.html';" class="tombol-nyala2 tooltip" style="top: 22%;left: 38%;
+	<button onClick="window.location='https://www.flickr.com/people/gilangdanu/';" class="tombol-nyala2 tooltip" style="top: 22%;left: 38%;
   z-index: 5;">1<span class="tooltip-content">My favorite pastime, video game photography!</span></button>
 	
 	<button onClick="window.location='http://gilangdanu.com/blog/';" class="tombol-nyala tooltip" style="top: 35%;left: 55%;
