--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="biarketengah kontainer-gede">
 	<nav class="menukecil left-align">
 		<ul>
-			<li class="py1"><a href="https://www.flickr.com/people/gilangdanu/" title="My Portfolio"><button class="btn btn-primary btn-lg bg-red">Portfolio</button></a></li>
+			<li class="py1"><a href="https://www.flickr.com/people/gilangdanu/" title="My gaming screenshots"><button class="btn btn-primary btn-lg bg-red">flickr</button></a></li>
 			
 			<li class="py1"><a href="http://gilangdanu.com/blog" title="My blog on github pages"><button class="btn btn-primary btn-lg bg-red">Blog</button></a></li>
 			
@@ -76,7 +76,7 @@
     </section>
     </div>
     <div class="center px2 mt4">
-        <span class="sans"> Handcoded with <i class="heart fa fa-heart fa-lg"></i>&nbsp;from Jakarta<br />Ⓒ Gilang Danu  2017 </span>
+        <span class="sans"> Handcoded with <i class="heart fa fa-heart fa-lg"></i>&nbsp;from Jakarta<br />Ⓒ Gilang Danu  2018 </span>
     </div>
   </div>
 </section>
